--- a/index.html
+++ b/index.html
@@ -138,6 +138,16 @@
                         </small>
                         <input type="checkbox" onclick="toggle()" id="check"/> <span>Show
                           Password<span class="require">*</span></span>
+                    <div class="mb-3">
+                      <label for="address">Address</label>
+                         <textarea
+                          class="form-control"
+                          placeholder="Enter address"
+                          id="address"
+                          autocomplete="off"
+                          ></textarea>
+                         <div class="fs-6 fw-light" id="charCount"></div>
+                      </div>
                         
                         
                       </div>
