--- a/index.html
+++ b/index.html
@@ -189,8 +189,26 @@
                             <select id="city" name="city" required oninvalid="this.setCustomValidity('Please select city')"
                             oninput="this.setCustomValidity('')">
                                <option value="" disabled selected>Select City</option>
-                               <option value="newyork">New York</option>
-                               <option value="losangeles">Los Angeles</option>
+                               <option value="anaparthy">Anaparthy</option>
+                               <option value="amalapuram">Amalapuram</option>
+                               <option value="araku">Araku</option>  
+                                <option value="bhimavaram">Bhimavaram</option>
+                                 <option value="chebrollu">Chebrollu</option>
+                                 <option value="devarapalli">Devarapalli</option>
+                                 <option value="dhone">Dhone</option>
+                                 <option value="draksharamam">Draksharamam</option>
+                                 <option value="eluru">Eluru</option>
+                                 <option value="gudur">Gudur</option>
+                                 <option value="guntur">Guntur</option>
+                                 <option value="kakinada">Kakinada</option>
+                                 <option value="kadapa">Kadapa</option>
+                                 <option value="kurnool">Kurnool</option>
+                                 <option value="madanapalle">Madanapalle</option>
+                                 <option value="madhuravada">Maduravaada</option>
+                                 <option value="markapur">Markapur</option>
+                                 <option value="narasapur">Narasapur</option>
+                                 <option value="nandhyal">Nandhyal</option>
+                                 <option value="ongole">Ongole</option>
                             </select>
                        </div>
                         
