--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
               <p class="pb-0 text-start">
 
               </p>
-              <p class="pb-0 mt-0 text-start"><a href="https://github.com/brs-studio/js-basics/tree/main/form-wizard-main" target="_blank" >Git Repository</a></p>
+              <p class="pb-0 mt-0 text-start"><a href="https://github.com/Ramya-brs/Form-Wizard" target="_blank" ><button type="button">Git Repository</button></a></p>
             </div>
           </div>
         </div>
