--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
         <div class="flex-grow-1">
 
 
-              <h4>Form Wizard</h4>
+              <h4><center>Form Wizard</center></h4>
           </div>
           <div class="d-flex ps-3 align-items-center">
             <div class="flex-grow-1">
               <p class="pb-0 text-start">
 
               </p>
-              <p class="pb-0 mt-0 text-start"><a href="https://github.com/Ramya-brs/Form-Wizard" target="_blank" ><button type="button">Git Repository</button></a></p>
+              <p class="pb-0 mt-0 text-start"><a href="https://github.com/Ramya-brs/Form-Wizard" target="_blank" ><button id="resetBtn" class="btn btn-primary mx-auto d-flex">Restart</button></a></p>
             </div>
           </div>
         </div>
