--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
               <p class="pb-0 text-start">
 
               </p>
-              <p class="pb-0 mt-0 text-start"><a href="https://github.com/Ramya-brs/Form-Wizard" target="_blank" ><button id="resetBtn" class="btn btn-primary mx-auto d-flex">Restart</button></a></p>
+              <p class="pb-0 mt-0 text-start"><a href="https://github.com/Ramya-brs/Form-Wizard" target="_blank"></a></p>
+                 <div class="mb-3">
+                    <button id="resetBtn" class="btn btn-primary mx-auto d-flex">Git Repository</button>
+                 </div>
             </div>
           </div>
         </div>
