--- a/index.html
+++ b/index.html
@@ -1,9 +1,3 @@
- b
-     Library / Component: Form Wizard
-     Description: Main page  for the app
-     (c) Copyright by BRS with Nyros. 
--->
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -12,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>Form Wizard</title>
-  <link rel="icon" href="http://203.193.173.125/buildriseshine/favicon.png" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous" />
   <link rel="stylesheet" href="assets/css/style.css" />
@@ -37,10 +30,8 @@
               <p class="pb-0 text-start">
 
               </p>
-             <div class="mb-3">
               <p class="pb-0 mt-0 text-start"><a href="https://github.com/Ramya-brs/Form-Wizard" target="_blank"></a></p>
-               <button id="resetBtn" class="btn btn-primary mx-auto d-flex">Git Repository</button>
-             </div>
+              <center><button type="button">Git Repository</button></center>
             </div>
           </div>
         </div>
