--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
               <p class="pb-0 text-start">
 
               </p>
-              <p class="pb-0 mt-0 text-start"><a href="https://github.com/Ramya-brs/Form-Wizard" target="_blank"></a></p>
-              <center><button type="button">Git Repository</button></center>
+              <center><p class="pb-0 mt-0 text-start"><a href="https://github.com/Ramya-brs/Form-Wizard" target="_blank"><button type="button">Git Repository</button></a></p></center>
             </div>
           </div>
         </div>
