--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               <p class="pb-0 text-start">
 
               </p>
-              <p class="pb-0 mt-0 text-start"><center><a href="https://github.com/Ramya-brs/Form-Wizard" target="_blank"><button type="button">Git Repository</button></a></center></p>
+              <p class="pb-0 mt-0 text-start"><a <center> href="https://github.com/Ramya-brs/Form-Wizard" target="_blank"><button type="button">Git Repository</button></center></a></p>
             </div>
           </div>
         </div>
